--- a/apps/reservations/.env
+++ b/apps/reservations/.env
@@ -1,6 +1,9 @@
+# Microservices
 AUTH_HOST=auth
 AUTH_PORT=3002
+PAYMENTS_HOST=payments
+PAYMENTS_PORT=3003
 
+# General
 MONGODB_URI="mongodb://mongo:27017/sleepr"
-
 PORT=3000
